# botris-interface

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.py  example.py  percall.txt  pyproject.toml  readme.md  requirements.txt  run.py  setup.py  tests.py  tottime.txt  verify_gs.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.yml  feature_request.md  post-install.yml
.github/workflows/: build_wheels.yml
botris/: __init__.py  _version.py
botris/_core/: board.cpp  constants.cpp  game.cpp  mode.cpp  multiply.cpp  pext.cpp  piece.cpp
botris/_core_src/: multiply.hpp  pext.cpp
botris/bots/: __init__.py
botris/bots/blockfish/: __init__.py  blockfish.py
botris/bots/blockfish/src/: __init__.py  ai.py  blockfish_pb2.py  ipc.py
botris/bots/bot/: bot.py
botris/bots/randombot/: __init__.py  randombot.py
botris/core/: __init__.py
botris/engine/: __init__.py  models.py  move_generator.py  pieces.py  tetris.py  utils.py
botris/interface/: __init__.py  interface.py  models.py  websocket_client.py
botris/test_cython/: pext.cpp
botris/tests/: big_test.py
bots/: .gitignore  __init__.py
bots/blockfish/: __init__.py  blockfish.py
bots/blockfish/src/: __init__.py  ai.py  blockfish_pb2.py  ipc.py
bots/bot/: bot.py
engine/: __init__.py  models.py  move_generator.py  pieces.py  test.py  tetris.py  utils.py
interface/: handlers.py  interface.py  main.py  models.py  utils.py  websocket_client.py
src/botris/: __init__.py
src/botris/_core/: board.cpp  constants.cpp  game.cpp  main_module.cpp  mode.cpp  movegen.cpp  piece.cpp
src/botris/bots/: __init__.py
src/botris/bots/bot/: bot.py
src/botris/bots/randombot/: __init__.py  randombot.py
src/botris/core/: __init__.py  cboard.py  cconstants.py  cgame.py  cmode.py  cmovegen_smeared.py  cmovegen_traditional.py  cpiece.py
src/botris/engine/: __init__.py  cconverts.py  models.py  tetris.py
src/botris/interface/: __init__.py  handlers.py  interface.py  websocket_client.py
tests/: basic_test_engine.py  test_engine.py  test_move_gen.py  test_speed.py  test_with_data.py
tetris/: bot_interface.py  env.py  game_state.py  piece.py  pieces.py  test.py  tetris.py  untest.py  utils.py
wheelhouse/: botris_interface-0.1.23.dev0+g6381c00.d20240817-cp310-cp310-win32.whl
